fix(ui): handle RTL layout issues on locale change

--- a/src/shared/ui/Button/ui/Button.module.css
+++ b/src/shared/ui/Button/ui/Button.module.css
@@ -5,7 +5,7 @@
   padding: 6px;
   font: inherit;
   color: inherit;
-  text-align: left;
+  text-align: start;
   cursor: pointer;
   background-color: var(--foreground-color);
   border: none;
