--- a/src/widgets/Header/ui/Settings/Settings.module.css
+++ b/src/widgets/Header/ui/Settings/Settings.module.css
@@ -4,8 +4,8 @@
 
 .settings {
   position: absolute;
+  inset-inline-end: 0;
   top: calc(100% + 0.5em);
-  right: 0;
   width: max-content;
   background-color: var(--foreground-color);
   border-radius: 22px;
